# dagster-dlt-demo

./: .gitignore  dagster_cloud.yaml  pyproject.toml  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
eu-central-1.sftpcloud.io/input/20250809/customers/_dlt_loads/: customers_source__1754756001.839657.jsonl
eu-central-1.sftpcloud.io/input/20250809/customers/_dlt_pipeline_state/: customers_to_duckdb__1754756001.839657__16ecab5a9ac43d964450f4e4f9fe7addd13bb6ae7fb7cc84c8146e30da4b6856.jsonl
eu-central-1.sftpcloud.io/input/20250809/customers/_dlt_version/: customers_source__1754756001.9110248__16ecab5a9ac43d964450f4e4f9fe7addd13bb6ae7fb7cc84c8146e30da4b6856.jsonl
eu-central-1.sftpcloud.io/input/20250809/orders/_dlt_loads/: orders_source__1754756017.292212.jsonl
eu-central-1.sftpcloud.io/input/20250809/orders/_dlt_pipeline_state/: orders_to_duckdb__1754756017.292212__87af81a588cf957d9bb9f205fbae1e0d670f1192f28d8a401b4e31d753c55e06.jsonl
eu-central-1.sftpcloud.io/input/20250809/orders/_dlt_version/: orders_source__1754756017.3655958__87af81a588cf957d9bb9f205fbae1e0d670f1192f28d8a401b4e31d753c55e06.jsonl
eu-central-1.sftpcloud.io/input/20250809/products/_dlt_loads/: products_source__1754756017.323017.jsonl
src/dagster_dlt_demo/: definitions.py
src/dagster_dlt_demo/defs/: jobs.py  resources.py  sensor.py
src/dagster_dlt_demo/defs/SFTPIngestor/: ingestor.py
src/dagster_dlt_demo/defs/SFTPIngestor/.dlt/: secrets.toml
src/dagster_dlt_demo/defs/assets/: dummy_asset.py
src/dagster_dlt_demo/sftp/: sftp_service.py
(+2 files in other folders)
