[project]
name = "dagster_dlt_demo"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.4",
    "dagster-dlt>=0.27.4",
    "dagster-duckdb>=0.27.4",
    "dagster-gcp>=0.27.4",
    "dlt[duckdb,filesystem,gs]>=1.12.1",
    "pandas>=2.3.1",
    "paramiko>=3.5.1",
    "polars>=1.32.0",
    "polars-lts-cpu>=1.32.0",
    "python-json-logger>=3.3.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_dlt_demo"
registry_modules = [
    "dagster_dlt_demo.components.*",
]


